--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,8 @@
-
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
+    background: #b7b7b7 none repeat scroll 0 0;
 }
 
 .container {
@@ -10,6 +10,16 @@ body {
     margin: 0 auto;
     padding: 20px;
 }
+
+h1, h2 {
+    color: #135dab;
+}
+
+h1 {
+    font-size: 3em;
+    text-align: center;
+}
+
 header {
     background-color: #0b3057;
     padding: 10px;
@@ -38,15 +48,15 @@ form {
 
 input[type="text"] {
     padding: 5px;
-    color: #fff;
+    color: #000; /* Color del texto ajustado a negro */
     margin-right: 10px;
 }
 
 button {
-    padding: 5px 10px;
-    /* background-color: #000000 !important;  */
-    color: #000000 !important;
-    border: none;
+    padding: 8px 15px; /* Ajusta los valores según tu preferencia */
+    background-color: #22c489;
+    color: #ffffff;
+    border: 1px solid #22c489;
     cursor: pointer;
 }
 
@@ -54,61 +64,170 @@ label {
     display: none;
 }
 
-input[type="text"] {
-    padding: 5px;
+main {
+    padding: 10px;
+    background-color: #eaeaea !important;
 }
 
-button {
-    padding: 5px 10px;
+.articulo {
+    display: flex;
+    flex-direction: row;
+}
+
+article {
+    max-width: 85%;
+    margin: 0 auto;
+}
+
+img {
+    width: 350px;
+    height: 250px;
+    margin: 10px 0;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+.layout {
+    margin: 0 auto;
+    max-width: 1170px;
+    width: 100%;
+    padding: 0 15px;
+}
+
+.form-group {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 50%;
+}
+
+.grid-8 {
+    width: 66.6667%;
+}
+
+.grid-12 {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: relative;
+    overflow: hidden;
+}
+
+section {
+    background: #34495e;
+    color: #000;
+    padding: 30px 0;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.section-title {
+    color: #fff;
+    font-size: 35px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.contact p {
+    color: #929292;
+    letter-spacing: 1.5px;
+    padding-top: 50px;
+}
+
+.form {
+    margin: 0 auto;
+}
+
+.form form {
+    margin-top: 50px;
+}
+
+input {
+    width: 100%;
+}
+
+.form-control {
+    width: 100%;
     background-color: #fff;
-    color: #007bff;
-    border: none;
+    border: 1px solid #ccc;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    color: #555;
+    display: block;
+    font-size: 14px;
+    line-height: 1.42857;
+    padding: 6px 12px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    text-transform: capitalize;
+}
+
+.costom-btn {
+    background: #22c489;
+    border: 1px solid #22c489;
+    color: #ffffff;
+    font: bold 16px/18px "Open Sans", sans-serif;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    width: 100%;
+    padding: 6px 12px;
     cursor: pointer;
 }
 
-body {
-	background: #b7b7b7 none repeat scroll 0 0;
-	font-family: 'Open Sans',sans-serif;}
-
-.layout {margin: 0 auto;	max-width: 1170px;	width: 100%;padding: 0 15px;}
-/********Grid Widht *******/
-
-.form-group{ float:left;    padding-left: 15px;    padding-right: 15px;       width: 50%;}
-.grid-8{width: 66.6667%;}
-.grid-12{width: 100%;padding-left: 15px;	padding-right: 15px;	position: relative;    overflow: hidden;}	
-
-
-/***Section Css******/
-
-section {    background: #34495e ;    color: #000;    padding: 30px 0;}
-.text-center{text-align:center;}
-.section-title {    color: #fff;    font-size: 35px;    font-weight: bold;    text-transform: uppercase;}
-.contact p {    color: #929292;    letter-spacing: 1.5px;    padding-top: 50px;}
-.form{ margin:0 auto;}
-.form form {    margin-top: 50px;}
-input {    width: 100%;}
-.form-control {    width: 100%;}
-.form-control {    background-color: #fff;    border: 1px solid #ccc;    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-    color: #555;    display: block;    font-size: 14px;     line-height: 1.42857;    padding: 6px 12px;
-    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;    width: 100%;
-	  text-transform: capitalize;}
-
-.costom-btn {    background:#22c489;    border: 1px solid #22c489;    color: #ffffff;
-    font: bold 16px/18px "Open Sans",sans-serif;    letter-spacing: 1.5px;    text-transform: uppercase;
-     width: 100%;	   padding: 6px 12px;	   cursor: pointer;}
-.form-group {    margin-top: 23px;}
-.icon-text {    color: #ffffff;    font: 16px/22px "Open Sans",sans-serif;    text-align: center;
-    text-transform: uppercase;	 margin: 25px 0;}
-.icon-holder {    margin: 0 auto;    width: 265px;}
-.icon-holder ul li a {    color: #ffffff;    height: 38px;    width: 38px;}
-.icon-holder ul li {    display: inline;    padding: 12px;}
-@media (max-width:980px) {
-	.layout {				width: 80%px;	}
-	.grid-6 {				width: 50%;	}
+.form-group {
+    margin-top: 23px;
 }
-@media (max-width:640px) {
-	.layout {		width: 80%;	}
-	.form-group, .grid-8 {		width: 100%;	}
 
+.icon-text {
+    color: #ffffff;
+    font: 16px/22px "Open Sans", sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 25px 0;
+}
 
-	}
+.icon-holder {
+    margin: 0 auto;
+    width: 265px;
+}
+
+.icon-holder ul li a {
+    color: #ffffff;
+    height: 38px;
+    width: 38px;
+}
+
+.icon-holder ul li {
+    display: inline;
+    padding: 12px;
+}
+
+@media (max-width: 980px) {
+    .layout {
+        width: 80%;
+    }
+
+    .grid-6 {
+        width: 50%;
+    }
+}
+
+@media (max-width: 640px) {
+    .layout {
+        width: 80%;
+    }
+
+    .form-group,
+    .grid-8 {
+        width: 100%;
+    }
+}
